Changed the end-screen bottom-container styles so that margins are in icons so I don't have to use 'calc' in width. This fixed layout issue in Android 4.x

--- a/src/styl/end-screen.styl
+++ b/src/styl/end-screen.styl
@@ -19,6 +19,7 @@ $end-screen-mixin($scale-size = $default-scale-size) {
       position: absolute;
       right: 0;
       bottom: 0;
+      margin-right: .5 * $endscreen-default-size;
       padding: 0;
       color: $gray;
       font-size: $endscreen-default-size * .60;
@@ -102,13 +103,15 @@ $end-screen-mixin($scale-size = $default-scale-size) {
       position: absolute;
       bottom: 0;
       left: 0;
-      margin: 0 .5  * $endscreen-default-size .25 * $endscreen-default-size  .5 * $endscreen-default-size;
-      width: calc(100% - 1em);
+      margin: 0 0 .25 * $endscreen-default-size 0;
+      width: 100%;
+      height: 1.5 * $endscreen-default-size;
     }
 
     .privacy-button {
       $privacy-button-default($scale-size);
       left: 0;
+      margin-left: .5 * $endscreen-default-size;
       line-height: 1 * $endscreen-default-size;
     }
 
